More code hilighting exemples

--- a/3_Réalisation.tex
+++ b/3_Réalisation.tex
@@ -36,8 +36,10 @@ Lister les documents fournis au client avec votre produit, en indiquant les num√
   \item autres‚Ä¶
 \end{itemize}
 
-\section{Exemple d'extrait de code}
-\begin{minted}{python}
+\section{Exemples d'extrait de code}
+
+\subsection{Python}
+\begin{minted}[linenos]{python}
 import numpy as np
 
 def incmatrix(genl1,genl2):
@@ -67,4 +69,40 @@ def incmatrix(genl1,genl2):
                 VT = np.zeros((n*m,1), int)
     
     return M
+\end{minted}
+
+\subsection{cpp with linenos}
+\begin{minted}[linenos]{cpp}
+#include <cstdio>
+#include <cstdlib>
+#include <iostream>
+
+using namespace std;
+
+unsigned short i;
+
+int main() {
+  for (i = 0; i <= 5; i++) {
+    // whatever
+  }
+  return 0;
+}
+\end{minted}
+
+\subsection{cpp with margin and linenos}
+\begin{minted}[xleftmargin=1em,linenos]{cpp}
+#include <cstdio>
+#include <cstdlib>
+#include <iostream>
+
+using namespace std;
+
+unsigned short i;
+
+int main() {
+  for (i = 0; i <= 5; i++) {
+    // whatever
+  }
+  return 0;
+}
 \end{minted}
