--- a/rapport_de_projet.tex
+++ b/rapport_de_projet.tex
@@ -1,5 +1,8 @@
-% comment
-\documentclass[12pt,twoside,a4paper]{report}
+\documentclass[12pt,openright,twoside,a4paper]{report}
+
+% Fix non-working "openright" report option
+\addtolength{\oddsidemargin}{1.5cm}
+\addtolength{\evensidemargin}{-1.5cm}
 
 \usepackage[outputdir=./out]{minted}
 \usepackage[svgnames]{xcolor}
